Config auto migration

--- a/APIs/API.csproj
+++ b/APIs/API.csproj
@@ -30,4 +30,7 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <Target Name="PrePublishTarget" AfterTargets="Publish">
+	  <Exec Command="dotnet ef database update" />
+  </Target>
 </Project>
