Fix ampersand error in xml style csproj for cmd

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -31,7 +31,6 @@
 	</ItemGroup>
 
 	<Target Name="PrePublishTarget" AfterTargets="Publish">
-		<Exec Command="cd ../" />
-		<Exec Command="dotnet ef database update --project=Infrastructure --startup-project=API" />
+		<Exec Command="cd ../ &amp;&amp; dotnet ef database update --project=Infrastructure --startup-project=API" />
 	</Target>
 </Project>
